--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: CI pipeline
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 
 jobs:
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Set up JDK 17
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '17'
 
