Configure JUnit 5 and add settings.gradle file
Enabled JUnit 5 testing by adding `useJUnitPlatform()` in `build.gradle`. Created a new `settings.gradle` file to define the root project name and include subprojects with custom build file names.

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ subprojects {
         projectId = 'swagger'
     }
 
+    test {
+        useJUnitPlatform()
+    }
+
+
     group = this.group
     version = this.version
 
