--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 group = 'de.bytestore'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 subprojects {
     apply plugin: 'java-library'
