Update Maven repository URL in build.gradle
Switched the Maven repository URL from a custom domain to the GitHub releases URL for the jmix-swagger-ui-addon. This ensures the dependency is fetched from the correct location.

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ subprojects {
     publishing {
         repositories {
             maven {
-                url = 'https://myrepo/releases/'
+                url = 'https://github.com/Gamer08YT/jmix-swagger-ui-addon/releases/'
                 credentials {
                     username rootProject.hasProperty('uploadUser') ? rootProject['uploadUser'] : 'admin'
                     password rootProject.hasProperty('uploadPassword') ? rootProject['uploadPassword'] : 'admin'
