--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ subprojects {
     publishing {
         repositories {
             maven {
-                url = 'https://github.com/Gamer08YT/jmix-swagger-ui-addon/releases/'
+                url = 'http://github.com/Gamer08YT/jmix-swagger-ui-addon/releases/'
                 credentials {
                     username rootProject.hasProperty('uploadUser') ? rootProject['uploadUser'] : 'admin'
                     password rootProject.hasProperty('uploadPassword') ? rootProject['uploadPassword'] : 'admin'
