--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,5 +14,5 @@ jobs:
         run: gradle -Pversion=${{ github.event.release.tag_name }} build publish
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_USERNAME: ${{ github.repository_owner }}
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_USERNAME: Gamer08YT
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
