--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 group = 'de.bytestore'
-version = '1.1.7'
+version = '1.2.0'
 
 subprojects {
     apply plugin: 'java-library'
@@ -23,7 +23,7 @@ subprojects {
     }
 
     jmix {
-        bomVersion = '2.4.2'
+        bomVersion = '2.5.0-RC1'
         projectId = 'swagger'
     }
 
