--- a/swagger-ui/src/main/resources/de/bytestore/swaggerui/module.properties
+++ b/swagger-ui/src/main/resources/de/bytestore/swaggerui/module.properties
@@ -1,2 +1,3 @@
 jmix.ui.menu-config = de/bytestore/swaggerui/menu.xml
 jmix.core.available-locales=en
+jmix.ui.view-file-extensions=htm, html, jpg, png, jpeg, pdf
