--- a/swagger-ui/swagger-ui.gradle
+++ b/swagger-ui/swagger-ui.gradle
@@ -6,9 +6,13 @@ dependencies {
     implementation 'io.jmix.flowui:jmix-flowui-starter'
     implementation 'io.jmix.flowui:jmix-flowui-themes'
 
+    testImplementation platform("org.junit:junit-bom:5.10.0") // or latest stable
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
 
     testRuntimeOnly 'org.hsqldb:hsqldb'
